--- a/src/syntax/syntax.fsproj
+++ b/src/syntax/syntax.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -67,6 +67,8 @@
     <Compile Include="FStar.Syntax.Resugar.fs" />
     <Compile Include="FStar.Syntax.Print.fsi" />
     <Compile Include="FStar.Syntax.Print.fs" />
+    <Compile Include="FStar.Syntax.Embeddings.fsi" />
+    <Compile Include="FStar.Syntax.Embeddings.fs" />
     <Compile Include="FStar.Syntax.MutRecTy.fsi" />
     <Compile Include="FStar.Syntax.MutRecTy.fs" />
     <Content Include="packages.config" />
