--- a/src/extraction/extraction.fsproj
+++ b/src/extraction/extraction.fsproj
@@ -116,8 +116,8 @@
       <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\reflection\reflection.fsproj">
-      <Name>syntax</Name>
-      <Project>{d008f256-80aa-4f9c-9c10-dc743d772940}</Project>
+      <Name>reflection</Name>
+      <Project>{8869FA4E-96AF-4E01-99BC-B52C88610E3D}</Project>
       <Private>True</Private>
     </ProjectReference>
 
