--- a/examples/Makefile
+++ b/examples/Makefile
@@ -20,7 +20,8 @@ incl \
 struct \
 micro-benchmarks \
 bytes \
-tactics
+tactics \
+native_tactics
 
 
 # low-level \  ... NS: removing from CI for this branch
