--- a/ulib/Makefile
+++ b/ulib/Makefile
@@ -42,6 +42,16 @@ EXTRACT_ALL=$(filter-out $(REALIZED),$(wildcard FStar.*.fst FStar.*.fsti))
 
 .mgen: *.fst *.fsti
 	mkdir -p ml/extracted
+	cp ../src/ocaml-output/FStar_*.ml                      ml/extracted/
+	cp ../src/basic/ml/*.ml                                ml/extracted/
+	cp ../src/prettyprint/ml/*.ml                          ml/extracted/
+	cp ../src/extraction/ml/FStar_Extraction_ML_PrintML.ml ml/extracted/
+	cp ../src/parser/ml/FStar_Parser_LexFStar.mll          ml/extracted/
+	cp ../src/parser/ml/FStar_Parser_ParseIt.ml            ml/extracted/
+	cp ../src/parser/ml/FStar_Parser_Util.ml               ml/extracted/
+	cp ../src/tactics/ml/FStar_Tactics_Native.ml           ml/extracted/
+	cp ../src/tactics/ml/FStar_Tactics_Load.ml             ml/extracted/
+	cp ../src/tactics/ml/FStar_Tactics_Builtins.ml         ml/extracted/
 	$(FSTAR) --lax --codegen OCaml --odir ml/extracted $(FSTAR_DEFAULT_ARGS) $(EXTRACT_ALL)
 	@# creating a dummy file so that the target is not regenerated unless a file has changed
 	touch .mgen
