--- a/ulib/ml/Makefile.include
+++ b/ulib/ml/Makefile.include
@@ -5,7 +5,7 @@
 
 FSTAR_REALIZED_MODULES=All BaseTypes Buffer Char CommonST Constructive Float Ghost Heap Monotonic.Heap \
 	HyperStack.All HyperStack.ST Int16 Int32 Int63 Int64 Int8 Int.Cast IO \
-	List List.Tot.Base Mul Option Pervasives.Native Set ST String \
+	List List.Tot.Base Mul Option Pervasives.Native Set ST Exn String \
 	UInt16 UInt32 UInt63 UInt64 UInt8 \
 	Pointer BufferNG Reflection.Types Tactics.Builtins \
 	Tactics.Types Bytes Util \
