adding a fake exn file

--- a/src/basic/basic.fsproj
+++ b/src/basic/basic.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -65,6 +65,7 @@
     <Compile Include="basetypes-fake.fs" />
     <Compile Include="prims-fake.fs" />
     <Compile Include="st-fake.fs" />
+    <Compile Include="exn-fake.fs" />
     <Compile Include="all-fake.fs" />
     <Compile Include="mul-fake.fs" />
     <Compile Include="char.fsi" />
