U Wrappers and invariant sketch

--- a/examples/sgx/wrappers/Makefile
+++ b/examples/sgx/wrappers/Makefile
@@ -2,7 +2,7 @@
 FSTAR_HOME=/home/t-angoll/everest/FStar/
 include ../../Makefile.include
 
-all: GenWrapper.uver
+all: GenWrapper.uver Gen_U_Wrapper.uver
 
 include $(FSTAR_HOME)/ulib/ml/Makefile.include
 
@@ -11,11 +11,19 @@ OCAMLOPT_=$(OCAMLOPT_BARE) -package fstarlib -linkpkg -g
 
 # This target is very concise and re-uses the variables defined in
 # Makefile.include. You shouldn't need to call `cp` ever.
-ocaml: out GenWrapper.fst
+vwrapper: out GenWrapper.fst
 	$(MAKE) -C $(ULIB_ML)
 	$(FSTAR) $(FSTAR_DEFAULT_ARGS) --odir out --codegen OCaml GenWrapper.fst
-	$(OCAMLOPT) -I out out/Manifest.ml  out/GenWrapper.ml -o GenWrapper.exe
+	$(OCAMLOPT) -I out out/Manifest.ml  out/WrapperUtil.ml out/GenWrapper.ml -o GenWrapper.exe
 	./GenWrapper.exe
+
+# This target is very concise and re-uses the variables defined in
+# Makefile.include. You shouldn't need to call `cp` ever.
+uwrapper: out Gen_U_Wrapper.fst
+	$(MAKE) -C $(ULIB_ML)
+	$(FSTAR) $(FSTAR_DEFAULT_ARGS) --odir out --codegen OCaml Gen_U_Wrapper.fst
+	$(OCAMLOPT) -I out out/Manifest.ml out/WrapperUtil.ml out/Gen_U_Wrapper.ml -o GenUWrapper.exe
+	./GenUWrapper.exe
 
 LIB=$(FSTAR_HOME)/ulib
 BIN=$(FSTAR_HOME)/bin
