reflection: big refactor
have the compiler mirror the ulib more closely. this allows to take some
hacks and renamings out of the loop

--- a/src/basic/basic.fsproj
+++ b/src/basic/basic.fsproj
@@ -94,6 +94,7 @@
     <Compile Include="unionfind.fs" />
     <Compile Include="FStar.Ident.fs" />
     <Compile Include="FStar.Const.fs" />
+    <Compile Include="FStar.Order.fs" />
     <Compile Include="FStar.Errors.fs" />
     <Compile Include="version.fsi" />
     <Compile Include="version.fs" />
