--- a/ulib/ml/Makefile.include
+++ b/ulib/ml/Makefile.include
@@ -7,7 +7,8 @@ FSTAR_REALIZED_MODULES=All BaseTypes Buffer Char CommonST Constructive Float Gho
 	HyperStack.All HyperStack.ST Int16 Int32 Int63 Int64 Int8 Int.Cast IO \
 	List List.Tot.Base Mul Option Pervasives.Native Set ST Exn String \
 	UInt16 UInt32 UInt63 UInt64 UInt8 \
-	Pointer BufferNG Reflection.Types Tactics.Builtins \
+	Pointer BufferNG Tactics.Builtins \
+	Reflection.Types Reflection.Basic Reflection.Data \
 	Tactics.Types Bytes Util \
 	Pervasives
 	# prims is realized by default hence not included in this list
