ulib: also ignore warnings about duplicate interfaces

--- a/ulib/ml/Makefile
+++ b/ulib/ml/Makefile
@@ -24,10 +24,12 @@ fstarlib.mllib: .mgen *.ml $(wildcard extracted/*.ml)
 
 FSTARLIB_DIR=../../bin/fstarlib/
 
+fstarlib.cma: export OCAMLFIND_IGNORE_DUPS_IN = $(shell ocamlfind query compiler-libs)
 fstarlib.cma:fstarlib.mllib
 	$(OCAMLBUILD) $@
 	cp _build/ulib/ml/$@ $(FSTARLIB_DIR)
 
+fstarlib.cmxa: export OCAMLFIND_IGNORE_DUPS_IN = $(shell ocamlfind query compiler-libs)
 fstarlib.cmxa:fstarlib.mllib | fstarlib.cma
 	$(OCAMLBUILD) $@
 	cp _build/ulib/ml/$@ $(FSTARLIB_DIR)
