--- a/examples/kv_parsing/Makefile
+++ b/examples/kv_parsing/Makefile
@@ -1,29 +1,29 @@
 FSTAR_HOME=../..
 include ../Makefile.include
 
-FST_FILES= Slice.fst \
-	   KeyValue.fst \
-	   PureParser.fst \
-	   PureValidator.fst \
-	   Validator.fst \
-	   ValidatedParser.fst \
-	   PureEncoder.fst \
-	   Serializer.fst \
-	   EnumParsing.fst
-
-EXTRACT_FILES= 	Validator.fst \
+FST_FILES :=	Slice.fst \
+		KeyValue.fst \
+		PureParser.fst \
+		PureValidator.fst \
+		Validator.fst \
 		ValidatedParser.fst \
+		PureEncoder.fst \
 		Serializer.fst \
 		EnumParsing.fst
 
-FSTAR_INCLUDE_PATHS=--include ../../../kremlin/kremlib
+EXTRACT_FILES := Validator.fst \
+		 ValidatedParser.fst \
+		 Serializer.fst \
+		 EnumParsing.fst
+
+FSTAR_INCLUDE_PATHS:=--include $(KREMLIN_HOME)/kremlib
 
 OTHERFLAGS+=$(FSTAR_INCLUDE_PATHS)
 
 all: $(FST_FILES:.fst=.uver)
 
 %.fst-in:
-	@echo $(FSTAR_INCLUDE_PATHS)
+	@echo $(OTHERFLAGS)
 
 
 extract-c: $(EXTRACT_FILES)
