tactics: some more negtests

--- a/examples/tactics/neg/Makefile
+++ b/examples/tactics/neg/Makefile
@@ -3,4 +3,6 @@ include ../../Makefile.include
 
 all:	NonTot.fail-uver	\
 	Unresolved.fail-uver	\
-	Unbound.fail-uver
+	Unbound.fail-uver	\
+	Ill1.fail-uver		\
+	Ill2.fail-uver
