Add start of lookup implementation

--- a/examples/kv_parsing/Makefile
+++ b/examples/kv_parsing/Makefile
@@ -7,12 +7,14 @@ FST_FILES :=	Slice.fst \
 		PureValidator.fst \
 		Validator.fst \
 		ValidatedParser.fst \
+		ValidatedAccess.fst \
 		PureEncoder.fst \
 		Serializer.fst \
 		EnumParsing.fst
 
 EXTRACT_FILES := Validator.fst \
 		 ValidatedParser.fst \
+		 ValidatedAccess.fst \
 		 Serializer.fst \
 		 EnumParsing.fst
 
