--- a/src/ocaml-output/SConscript
+++ b/src/ocaml-output/SConscript
@@ -4,37 +4,51 @@ import subprocess
 import re
 import time
 import datetime
+import tempfile
 import SCons
 
-Import('env')
+Import('My_env')
+env = My_env.Clone()  # ensure changes here don't have impact on other SConscripts
 
 # --------------------------------------------------------------------
 conf = Configure(env)
-menhir_tool = conf.CheckProg('menhir') # returns None or the full path to it
+if sys.platform == 'win32' or sys.platform == 'cygwin':  # Windows 32-bit or 64-bit
+  # Windows Python doesn't know how to handle menhir, which is a PE file with no
+  # extension.
+  menhir = env.WhereIs('menhir', env['ENV']['PATH'], '')
+  if menhir == None:
+    menhir_tool = None
+  else:
+    menhir_tool = tempfile.gettempdir() + '\\menhir.exe'
+    Execute(Copy(menhir_tool, menhir))
+else:
+  menhir_tool = conf.CheckProg('menhir') # returns None or the full path to it
+
+menhir_min_version=20161115
 if menhir_tool:
   output = subprocess.check_output([menhir_tool, '--version'])
   srch = re.search(r'.*version ([0-9]*)', output)
   version = int(srch.group(1))
-  has_valid_menhir = version >= 20161115
+  if version < menhir_min_version:
+    raise SCons.Errors.UserError('Correct version of menhir not found (needs a version newer than %d, is %d)'% (menhir_min_version,version))
   env['MENHIR'] = menhir_tool
-else:  
-  has_valid_menhir = False
-  env['MENHIR'] = None
+else:
+  raise SCons.Errors.UserError('Cannot find menhir')
 
- 
+env['ENV']['MENHIRLIB'] = os.environ['MENHIRLIB']
+env['ENV']['OCAMLFIND_CONF']=os.environ['OCAMLFIND_CONF']
+env['ENV']['OCAML_TOPLEVEL_PATH']=os.environ['OCAML_TOPLEVEL_PATH']
 env['MENHIRARGS']='' #'--explain --infer -la 1 --table'
 env['OCAMLLEX']='ocamllex'
 env['OCAMLBUILD']='ocamlbuild'
 env['OCAMLBUILDARGS']='-cflag \'-g\' -I src/ocaml-output -I src/basic/ml ' \
                       '-I src/parser/ml -I src/fstar/ml -I src/extraction/ml -j 24 -build-dir src/ocaml-output/_build ' \
-                      '-I src/prettyprint/ml -I src/ocaml-output/bootlibs -use-ocamlfind'
+                      '-I src/prettyprint/ml -I src/tactics/ml -I ulib/ml -I ulib/ml/compiler -use-ocamlfind'
 
-build_parse_mly=['cd ../..',
-                 '$MENHIR $MENHIRARGS --only-preprocess-for-ocamlyacc $SOURCE >$TARGET']
-copy_parse_mly=Copy('$TARGET', '$SOURCE')                   
-parse_mly=env.Command('parse.mly', '../parser/parse.mly', 
-                      build_parse_mly if has_valid_menhir else copy_parse_mly)
-                      
+parse_mly=env.Command('parse.mly', '../parser/parse.mly',
+                      ['cd ../..',
+                       '$MENHIR $MENHIRARGS --only-preprocess-for-ocamlyacc $SOURCE >$TARGET'])
+
 parse_ml=env.Command(['parse.ml', 'parse.mli'], 'parse.mly', 'ocamlyacc $SOURCE')
 
 # generate FStar.Parser.Parse.fsti from parser/parse.fsi
@@ -51,7 +65,7 @@ def generate_fstar_parser_parse_ml(target, source, env):
     raise SCons.Errors.UserError("Can't read source file %s" % parse_ml)
   sourcefile = fd.read()
   fd.close()
-  
+
   # delete the temporary files as they are not tracked by SCons and
   # ocamlbuild complains downstream if they are present.
   os.remove(parse_ml)
@@ -62,7 +76,7 @@ def generate_fstar_parser_parse_ml(target, source, env):
     fd = open(target[0].get_path(), "w")
   except (OSError,IOError), e:
     raise SCons.Errors.UserError("Can't write target file %s" % target[0])
-   
+
   fd.write('open Prims\n')
   fd.write('open FStar_Errors\n')
   fd.write('open FStar_List\n')
@@ -70,7 +84,7 @@ def generate_fstar_parser_parse_ml(target, source, env):
   fd.write('open FStar_Range\n')
   fd.write('open FStar_Options\n')
   fd.write('open FStar_Syntax_Syntax\n')
-  fd.write('open FStar_Syntax_Const\n')
+  fd.write('open FStar_Parser_Const\n')
   fd.write('open FStar_Syntax_Util\n')
   fd.write('open FStar_Parser_AST\n')
   fd.write('open FStar_Parser_Util\n')
@@ -92,11 +106,11 @@ def generate_fstar_version_ml(target, source, env):
   sourcefile = fd.read().split('\r\n')
   fd.close()
   VERSION = sourcefile[0]
-  
+
   # the Makefile showed local time along with timezone.  Python27 doesn't support timezones, so report UTC instead
   utcnow = datetime.datetime.utcnow().replace(microsecond=0)
   DATE = utcnow.isoformat()
-  
+
   if sys.platform == 'win32':
     if os.getenv('PROCESSOR_ARCHITECTURE')=='AMD64':
       PLATFORM='Windows_x64'
@@ -104,16 +118,23 @@ def generate_fstar_version_ml(target, source, env):
       PLATFORM='Windows_x86'
   else:
     PLATFORM=os.uname()[4]  # machine is at index 4
-  
+
   COMPILER = 'OCaml ' + subprocess.check_output(['ocamlc', '-version']).split('\r\n')[0]
-  
-  COMMIT = subprocess.check_output(['tools/get_commit']).split('\n')[0]
-  
+
+  # implement tools/get_commit directly
+  COMMIT = subprocess.check_output(['git', 'log','--pretty=format:%h','-n','1'])
+  try:
+    subprocess.check_output(['git', 'diff','--exit-code','HEAD'], stderr=subprocess.STDOUT)
+  except subprocess.CalledProcessError as e:
+    # if we get here, the git diff returned nonzero, indicating a dirty source tree
+    COMMIT = COMMIT + ' (dirty)'
+
   try:
     fd = open(target[0].get_path(), "w")
   except (OSError,IOError), e:
     raise SCons.Errors.UserError("Can't write target file %s" % target[0])
 
+  fd.write('open FStar_Util\n')
   fd.write('let dummy () = ();;\n')
   fd.write('FStar_Options._version := "' + VERSION + '";;\n')
   fd.write('FStar_Options._platform := "' + PLATFORM + '";;\n')
@@ -127,13 +148,13 @@ fstar_version_ml=env.Command('FStar_Version.ml', '../../version.txt', generate_f
 readpipe, writepipe = os.pipe()
 os.write(writepipe, 'print_endline Sys.ocaml_version')
 os.close(writepipe)
-OCAML_VERSION = subprocess.check_output(['ocaml','-noprompt','-noinit','-stdin'], stdin=readpipe).split('\r\n')[0]
+OCAML_VERSION = subprocess.check_output(['ocaml','get_branch.ml'], stdin=readpipe).split('\r\n')[0]
 os.close(readpipe)
 env.Command('../extraction/ml/FStar_Extraction_ML_PrintML.ml',
             '../extraction/ml/FStar_Extraction_ML_PrintML_'+OCAML_VERSION+'.ml',
             Copy('$TARGET', '$SOURCE'))
-            
-# generate ../parser/parse.fsy from parse.mly
+
+# generate ../parser/boot/parse.fsy from parse.mly
 def generate_parse_fsy(target, source, env):
   # read the source file into memory
   try:
@@ -142,24 +163,24 @@ def generate_parse_fsy(target, source, env):
     raise SCons.Errors.UserError("Can't read source file %s" % source[0])
   sourcelines = fd.read().split('\n')
   fd.close()
-  
+
   targetlines = ['%{']
   targetlines.append('#light "off"')
   targetlines.append('// (c) Microsoft Corporation. All rights reserved')
   targetlines.append('open Prims')
+  targetlines.append('open FStar')
   targetlines.append('open FStar.Errors')
   targetlines.append('open FStar.List')
   targetlines.append('open FStar.Util')
   targetlines.append('open FStar.Range')
   targetlines.append('open FStar.Options')
-  targetlines.append('open FStar.Syntax.Syntax')
-  targetlines.append('open FStar.Syntax.Const')
-  targetlines.append('open FStar.Syntax.Util')
+  targetlines.append('open FStar.Parser.Const')
   targetlines.append('open FStar.Parser.AST')
   targetlines.append('open FStar.Parser.Util')
   targetlines.append('open FStar.Const')
   targetlines.append('open FStar.Ident')
   targetlines.append('open FStar.String')
+  # TODO : fsyacc seems to complain as soon as there is an arrow -> in a %type declaration...
   for s in sourcelines:
     if re.match(r'/%{', s):
       continue
@@ -176,7 +197,7 @@ def generate_parse_fsy(target, source, env):
     if re.match(r'%type.*->.*', s):
       continue
     targetlines.append(s)
-      
+
   # write the target file
   try:
     fd = open(target[0].get_path(), "wb")
@@ -187,18 +208,15 @@ def generate_parse_fsy(target, source, env):
     for s in sl:
       fd.write(s)
   fd.close()
-  
-fstar_version_ml=env.Command(File('#/../parser/parse.fsy'), File('parse.mly'), generate_parse_fsy)
 
-GENERATED_FILES=['parse.mly','FStar_Parser_Parse.ml','FStar_Version.ml','../extraction/ml/FStar_Extraction_ML_PrintML.ml','../parser/parse.fsy']
+fstar_version_ml=env.Command(File('#/../parser/boot/parse.fsy'), File('parse.mly'), generate_parse_fsy)
 
-def MakeOcamlOutput(env, fstar_exe_name):
-  main_native = env.Command('main.native', '', 'cd .. && $OCAMLBUILD $OCAMLBUILDARGS main.native')
-  for g in GENERATED_FILES:
-    Depends(main_native, File('#/ocaml-output/'+g))
-  fstar_exe = env.Command('../../bin/'+fstar_exe_name+'.exe', main_native, Copy('$TARGET', '$SOURCE'))
-  fstar_ocaml=env.Command('../../bin/'+fstar_exe_name+'.ocaml', main_native, Copy('$TARGET', '$SOURCE'))
-  return [fstar_exe, fstar_ocaml]
-  
-env.AddMethod(MakeOcamlOutput, 'MakeOcamlOutput')
- 
+GENERATED_FILES=['parse.mly','FStar_Parser_Parse.ml','FStar_Version.ml','../extraction/ml/FStar_Extraction_ML_PrintML.ml','../parser/boot/parse.fsy']
+
+main_native = env.Command('_build/src/fstar/ml/main.native', '', 'cd .. && $OCAMLBUILD $OCAMLBUILDARGS main.native')
+for g in GENERATED_FILES:
+  Depends(main_native, File('#/ocaml-output/'+g))
+fstar_exe = env.Command('../../bin/fstar.exe', main_native, Copy('$TARGET', '$SOURCE'))
+
+Return('fstar_exe')
+
